@@ -25,7 +25,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from seemps.state import MPS\n",
-    "from seemps.analysis.finite_differences import smooth_finite_differences_mpo"
+    "from seemps.analysis.derivatives import finite_differences_mpo"
    ]
   },
   {
@@ -54,9 +54,9 @@
    "source": [
     "def remove_phase(v):\n",
     "    \"\"\"\n",
-    "    Removes the phase from a complex vector `v` by normalizing it with the phase \n",
+    "    Removes the phase from a complex vector `v` by normalizing it with the phase\n",
     "    of its maximum magnitude element.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    v : numpy.ndarray\n",
@@ -66,12 +66,12 @@
     "    -------\n",
     "    numpy.ndarray\n",
     "        A complex vector of the same shape as `v` with its phase removed.\n",
-    "    \n",
+    "\n",
     "    Notes\n",
     "    -----\n",
-    "    The phase of the vector is adjusted by multiplying it by the conjugate of \n",
-    "    the element with the maximum magnitude, normalized by the absolute value of \n",
-    "    that element. This operation effectively rotates the vector to align its \n",
+    "    The phase of the vector is adjusted by multiplying it by the conjugate of\n",
+    "    the element with the maximum magnitude, normalized by the absolute value of\n",
+    "    that element. This operation effectively rotates the vector to align its\n",
     "    largest element with the positive real axis.\n",
     "    \"\"\"\n",
     "    shape = v.shape\n",
@@ -79,9 +79,10 @@
     "    k = np.argmax(np.abs(v))\n",
     "    return (v * np.abs(v[k]) / v[k]).reshape(shape)\n",
     "\n",
+    "\n",
     "def norm2_difference(a, b):\n",
     "    \"\"\"\n",
-    "    Calculates the norm-2 difference between two vectors or MPS objects after \n",
+    "    Calculates the norm-2 difference between two vectors or MPS objects after\n",
     "    removing their phases and normalizing them.\n",
     "\n",
     "    Parameters\n",
@@ -94,14 +95,14 @@
     "    Returns\n",
     "    -------\n",
     "    float\n",
-    "        The norm-2 (Euclidean) difference between the two vectors after phase \n",
+    "        The norm-2 (Euclidean) difference between the two vectors after phase\n",
     "        removal and normalization.\n",
     "\n",
     "    Notes\n",
     "    -----\n",
-    "    If `a` or `b` are instances of the `MPS` class, they are first converted to \n",
-    "    vector form using the `to_vector()` method. The vectors are then phase-aligned \n",
-    "    using the `remove_phase` function and normalized to unit length. The difference \n",
+    "    If `a` or `b` are instances of the `MPS` class, they are first converted to\n",
+    "    vector form using the `to_vector()` method. The vectors are then phase-aligned\n",
+    "    using the `remove_phase` function and normalized to unit length. The difference\n",
     "    is calculated using the Euclidean norm of the difference vector.\n",
     "    \"\"\"\n",
     "    if isinstance(a, MPS):\n",
@@ -129,15 +130,17 @@
    "outputs": [],
    "source": [
     "a, b = -10, 10\n",
-    "n_qubits = range(6,23)\n",
-    "f = lambda x: np.exp(- x ** 2)\n",
-    "df = lambda x: - 2 * x * f(x)\n",
+    "n_qubits = range(6, 23)\n",
+    "f = lambda x: np.exp(-(x**2))\n",
+    "df = lambda x: -2 * x * f(x)\n",
     "errors = np.empty(shape=(len(n_qubits)))\n",
     "\n",
     "for i, n in enumerate(n_qubits):\n",
-    "    x, dx = np.linspace(a, b, num=2 ** n, endpoint=False, retstep=True)\n",
-    "    f_mps = MPS.from_vector(f(x), [2]*n, normalize=False)\n",
-    "    K = smooth_finite_differences_mpo(n, order=1, filter=9, dx=dx, periodic=True, tol=1e-3)\n",
+    "    x, dx = np.linspace(a, b, num=2**n, endpoint=False, retstep=True)\n",
+    "    f_mps = MPS.from_vector(f(x), [2] * n, normalize=False)\n",
+    "    K = finite_differences_mpo(\n",
+    "        n, order=1, filter=9, dx=dx, periodic=True, tol=1e-3\n",
+    "    )\n",
     "    errors[i] = norm2_difference((K @ f_mps), df(x))"
    ]
   },
@@ -148,11 +151,11 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.set_xlabel('n')\n",
-    "ax.set_ylabel('Error')\n",
+    "ax.set_xlabel(\"n\")\n",
+    "ax.set_ylabel(\"Error\")\n",
     "ax.set_xticks(n_qubits[::2], n_qubits[::2])\n",
-    "ax.plot(n_qubits, errors, linestyle='dotted')\n",
-    "ax.set_yscale('log')\n",
+    "ax.plot(n_qubits, errors, linestyle=\"dotted\")\n",
+    "ax.set_yscale(\"log\")\n",
     "plt.tight_layout()"
    ]
   }
