@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from seemps.analysis.finite_differences import smooth_finite_differences_mpo\n",
+    "from seemps.analysis.derivatives import finite_differences_mpo\n",
     "from seemps.analysis.operators import x_to_n_mpo\n",
     "from seemps.operators import MPOSum\n",
     "from seemps.state import DEFAULT_STRATEGY, Strategy, product_state\n",
@@ -87,7 +87,7 @@
     "            n=2,\n",
     "        )\n",
     "    )\n",
-    "    derivative = (-0.5 / m) * smooth_finite_differences_mpo(\n",
+    "    derivative = (-0.5 / m) * finite_differences_mpo(\n",
     "        n, dx=dx, order=2, periodic=periodic\n",
     "    )\n",
     "\n",
