@@ -1,8 +1,8 @@
-from .finite_differences import smooth_finite_differences_mpo
+from .finite_differences import finite_differences_mpo
 from .fourier_differentiation import fourier_derivative, fourier_derivative_mpo
 
 __all__ = [
-    "smooth_finite_differences_mpo",
+    "finite_differences_mpo",
     "fourier_derivative_mpo",
     "fourier_derivative",
 ]
