@@ -7,7 +7,7 @@ from seemps.analysis.operators import id_mpo
 from seemps.analysis.polynomials import mps_from_polynomial
 from seemps.state import MPS
 from seemps.state.factories import random_mps
-from seemps.analysis.differentiation import smooth_finite_differences_mpo
+from seemps.analysis.derivatives import finite_differences_mpo
 
 
 @dataclasses.dataclass
@@ -58,9 +58,7 @@ def make_Laplacian_problem(
     interval = RegularInterval(0.0, 1.0, 2**n)
     x = interval.to_vector()
     dx = x[1] - x[0]
-    mpo = id_mpo(n) + smooth_finite_differences_mpo(
-        n, order=2, filter=3, periodic=True, dx=dx
-    )
+    mpo = id_mpo(n) + finite_differences_mpo(n, order=2, filter=3, periodic=True, dx=dx)
     if rhs is None:
         rhs = np.asarray([0.5, 1.0])  # 0.5 + x
     rhs_mps = mps_from_polynomial(np.asarray(rhs), interval)
